DFHack future
    New tweaks:
        - farm-plot-select: Adds "Select all" and "Deselect all" options to farm plot menus
        - import-priority-category: Allows changing the priority of all goods in a
            category when discussing an import agreement with the liaison
        - manager-quantity: Removes the limit of 30 jobs per manager order

DFHack 0.40.13-r1
    Internals:
        - unified spatter structs
    Fixes:
        - no more -e after terminating

DFHack 0.40.12-r1
    Fixes:
        - possible crash fixed for hack-wish
        - updated search to not conflict with BUILDJOB_SUSPEND
        - workflow: job_material_category -> dfhack_material_category

    New plugins:
        - hotkeys (by Falconne): Shows ingame viewscreen with all dfhack keybindings active in current mode.
        - automelt: allows marking stockpiles for automelt (i.e. any items placed in stocpile will be designated for melting)

    Misc Improvements:
        - now you can use @ to print things in interactive Lua with subtley different semantics
        - optimizations for stockpiles for autotrade and stockflow
        - updated exportlegends.lua to work with new maps, dfhack 40.11 r1+

    Internals:
        - support for global onLoadWorld.init and onUnloadWorld.init files,
          called when loading and unloading a world
        - Close file after loading a binary patch.

DFHack 0.40.11-r1

    Internals:
        - Plugins on OS X now use ".plug.dylib" as an extension instead of ".plug.so"
    Fixes:
        - 3dveins should no longer hang/crash on specific maps
        - Fixed some autotrade and search layout issues
        - Updated deathcause
        - hack-wish should work now
        - reveal no longer allocates data for nonexistent map blocks
        - Various documentation fixes and updates

DFHack v0.40.10-r1

A few bugfixes.

DFHack v0.40.08-r2

    Internals:
        supported per save script folders
        Items module: added createItem function