@@ -2002,7 +2002,11 @@ category when discussing an import agreement with the liaison</p>
 </td>
 </tr>
 <tr class="field"><th class="field-name" colspan="2">manager-quantity:</th></tr>
-<tr class="field"><td>&nbsp;</td><td class="field-body"><p class="first last">Removes the limit of 30 jobs per manager order</p>
+<tr class="field"><td>&nbsp;</td><td class="field-body"><p class="first">Removes the limit of 30 jobs per manager order</p>
+</td>
+</tr>
+<tr class="field"><th class="field-name" colspan="2">civ-view-agreement:</th></tr>
+<tr class="field"><td>&nbsp;</td><td class="field-body"><p class="first last">Fixes overlapping text on the &quot;view agreement&quot; screen</p>
 </td>
 </tr>
 </tbody>
