@@ -1285,6 +1285,7 @@ Subcommands that persist until disabled or DF quit:
 :import-priority-category:  Allows changing the priority of all goods in a
                             category when discussing an import agreement with the liaison
 :manager-quantity:          Removes the limit of 30 jobs per manager order
+:civ-view-agreement:        Fixes overlapping text on the "view agreement" screen
 
 
 fix-armory
