@@ -4,6 +4,8 @@ DFHack future
         - import-priority-category: Allows changing the priority of all goods in a
             category when discussing an import agreement with the liaison
         - manager-quantity: Removes the limit of 30 jobs per manager order
+        - civ-view-agreement: Fixes overlapping text on the "view agreement" screen
+
 
 DFHack 0.40.13-r1
     Internals:
